@@ -1,63 +1,88 @@
-# 🔐 JavaFX Strong Password Generator
+# JavaFX Strong Password Generator
 
-A simple yet powerful GUI application built using **JavaFX** that helps users generate strong and memorable passwords based on selected phrases and special symbols.
+## Overview
 
-The app displays the **password length**, estimates **password strength** against potential hackers, and allows the user to save the password either **on paper** or in a **text file**.
+This JavaFX application helps users generate strong, memorable passwords based on a selected phrase and special symbol. The app also displays the password's length and estimates its strength against hacking attempts. Users can choose to save the password on paper or export it to a `.txt` file.
+
+## Features
+
+- 🔐 **Password Generation** based on user-selected phrases and symbols
+- 📏 **Password Length Display**
+- 🧠 **Password Strength Estimation** against brute-force attacks
+- 💾 **Save to Text File** option
+- 🖨️ **Print for Paper Copy** (simulated or integrated if printing supported)
+- 🖥️ **Clean and Intuitive JavaFX GUI**
+
+## How It Works
+
+1. **Select a Phrase**: Choose a memorable phrase from a predefined list.
+2. **Select a Special Symbol**: Pick a symbol to enhance the complexity.
+3. **Generate Password**: Click the generate button to create a strong password.
+4. **View Details**: See the password, its length, and an estimated strength rating.
+5. **Save or Print**: Choose to save the password to a `.txt` file or print it out.
+
+## Technologies Used
+
+- Java 11+
+- JavaFX
+- Maven or Gradle (optional for building)
+- Java IO for file operations
+
+## Setup Instructions
+
+### Prerequisites
+
+- Java JDK 11 or later
+- JavaFX SDK (if not bundled with your IDE)
+- An IDE like IntelliJ IDEA, Eclipse, or VS Code with Java support
+
+### Running the App
+
+1. Clone or download this repository.
+2. Open the project in your IDE.
+3. Make sure JavaFX is properly set up in your environment.
+4. Run the `Main` class or `PasswordGeneratorApp` class (depending on your class naming).
+
+### Example Password Generation Logic
+
+The password might be generated using a combination of:
+- The selected phrase (e.g., "Sunshine")
+- The selected symbol (e.g., "@")
+- A random or fixed pattern (e.g., random digits or capitalization)
+
+Example Output: `Sunshine@29Zp`
+
+### Estimating Password Strength
+
+Password strength is calculated based on:
+- Length of the password
+- Use of upper/lowercase letters, numbers, and special symbols
+- Entropy estimation (basic or advanced)
+
+Strength Levels:
+- Weak
+- Medium
+- Strong
+- Very Strong
+
+## Saving the Password
+
+- The user can choose to save the password in a plain `.txt` file.
+- The file will be saved in a default or user-specified location.
+
+## Future Improvements
+
+- Allow custom phrase input
+- Add more symbols and phrase categories
+- Enhanced entropy-based strength estimation
+- Integration with a secure password manager
+
+## Screenshots
+
+*(Add screenshots of your app here if available)*
+
+## License
+
+This project is open-source. You can modify and use it freely for personal or educational purposes.
 
 ---
-
-## 🧰 Features
-
-- ✅ Clean and intuitive JavaFX GUI
-- ✅ User selects a **phrase** from a predefined list
-- ✅ User selects a **special symbol** from another list
-- ✅ Program generates a password by combining the selections with randomization
-- ✅ Displays:
-  1. The generated password
-  2. Password length
-  3. Estimated strength (weak / moderate / strong / very strong)
-- ✅ Option to save password:
-  - To a `.txt` file
-  - Or copy it manually (e.g., write it down on paper)
-
----
-
-## 🎬 Demo
-
-![Password Generator Demo](files/PassWrdDemo.gif)
-
----
-
-## 🚀 Getting Started
-
-### 1. Prerequisites
-
-Make sure you have the following installed:
-
-- Java 11 or higher
-- JavaFX SDK
-- An IDE like IntelliJ IDEA, Eclipse, or VS Code with JavaFX support
-
-### 2. Clone or Download the Project
-
-```bash
-git clone https://github.com/yourusername/strong-password-generator-javafx.git
-cd strong-password-generator-javafx
-
-### 3. Open and Configure the Project
-
-Open the project in your IDE.
-
-Link your JavaFX SDK to the project.
-
-Ensure VM options are set correctly when running:
---module-path /path/to/javafx-sdk/lib --add-modules javafx.controls,javafx.fxml
-
-### 4. Run the App
-
-Run Main.java from your IDE
-
-Or from terminal:
-
-javac --module-path /path/to/javafx-sdk/lib --add-modules javafx.controls,javafx.fxml -d out src/*.java
-java --module-path /path/to/javafx-sdk/lib --add-modules javafx.controls,javafx.fxml -cp out Main
